nu virker det hele

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
 h1 {
   text-align: center;
   font-size: 8vw;
+  margin-bottom: 0;
 }
 
 #gamefield {
@@ -27,8 +28,8 @@ h1 {
 
 .player {
   transform: scale(var(--rot), 1);
-  width: 40vw;
-  height: 40vw;
+  width: 32vw;
+  height: 32vw;
   background-size: 100%;
   background-image: url(hand_rock.png);
 }
